comentario de ejemplo
Se ha agregado un comentario de ejemplo para confirmar el funcionamiento de github

--- a/Capitulo1/introduccion.tex
+++ b/Capitulo1/introduccion.tex
@@ -93,6 +93,6 @@ El diseño adecuando de un sistema de generación de alto voltaje nos permite ll
 
 \section{Estructura de la tesis}
 
-Este trabajo está dividido en XX capítulos. Al principio se encuentra 
+Este trabajo está dividido en XX capítulos. Al principio se encuentra el desarrollo de un trabajo de tal cosa xx este es un ejemplo.
 \\\\
 Finalmente se encuentra la parte de 
