--- a/Capitulo2/marco_teorico.tex
+++ b/Capitulo2/marco_teorico.tex
@@ -115,6 +115,8 @@ La fuente de voltaje lineal consiste en un sistema sencillo y estructurado, el c
  
  De manera independiente podemos analizar cada aspecto presentado en la imagen, el cual, de uno en uno se va realizando un análisis para definir los valores y topologias que satisfacen las necesidades requeridas. Tomando en cuenta lo mencionado podemos comenzar a definir las ecuaciones y modelos existentes.
 \subsection{Transformador}
+El transformador es un dispositivo electrónico que nos permite transformar una
+tensión alterna de entrada en una tensión alterna de salida de distinto valor. La principal ventaja que tienen los transformadores es su alto rendimiento. En la figura 2 se puede ver un esquema de un transformador
 \subsection{Rectificador}
 
 \subsection{Filtro}
