--- a/Capitulo3/diseno_experimento.tex
+++ b/Capitulo3/diseno_experimento.tex
@@ -8,7 +8,7 @@ En este capítulo se expone todo el desarrollo de la fuente de alto voltaje en c
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=10cm]{Capitulo3/figs/figura1.jpg}
+\includegraphics[width=14cm]{Capitulo3/figs/figura1.png}
 \caption{Topologia de fuente de alto voltaje}
 \end{figure}
 
