--- a/Capitulo1/introduccion.tex
+++ b/Capitulo1/introduccion.tex
@@ -6,7 +6,7 @@
 %  Capítulo 1: Introducción- DEFINIR OBJETIVOS DE LA TESIS              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{Introducción}
+%\chapter{Introducción}
 
 %: ----------------------- HELP: latex document organisation
 % the commands below help you to subdivide and organise your thesis
@@ -18,46 +18,44 @@
 %                           Presentación                                %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Resumen} % section headings are printed smaller than chapter names
-El trabajo de esta tesis consiste en el desarrollo de la Instrumentación de un acelerador de partículas en modalidad haz de partículas. Basado en el diseño de acelerador lineal de corriente directa (CD). Dicho trabajo se centra en varias etapas de desarrollo para su correcta conclusión, la primera es el desarrollo de un diseño de fuente de alto voltaje (HPS, por sus siglas en ingles), capaz de suministrar más de 20 KV a su salida en CA, y utilizando el sistema Crockoft-Walton (CW) amplificarlo y convertirlo en CD. Dicha HPS puede ser controlada manualmente mediante una LCD indicadora y un encoder rotativo, en dicha interface se despliega un menú para la configuración, así como también es posible configurar la HPS mediante comunicación SERIAL, PC-HPS, utilizando un programa diseñado en MatLab, también desarrollado en el proyecto. \\
-Durante el desarrollo de se ha analizado los sistemas crockoft-walton combinado con un transformador de ignición, el cual puede elevar el voltaje en proporción 1:1000, perfecto para los requerimientos necesarios para el proyecto. \\
+\chapter{Resumen} % section headings are printed smaller than chapter names
+
+El trabajo de esta tesis consiste en el desarrollo de una fuente de alto voltaje y bajo ruido para la implementación en un acelerador de partículas tipo lineal, mediante la utilización  de un sistema de inversor de voltaje y un rectificador del tipo multiplicador, Cockcroft–Walton, así como también un control del sistema con lazo cerrado e interfaces gráficas para el usuario.\\
+
+Durante el desarrollo del sistema de alto voltaje se realizo el diseño, la simulación, la fabricación y la validación de los datos proporcionados por el sistema, tomando en cuenta la optimización en el uso de componentes para obtener una reducción en el costo de la fabricación del sistema de alto voltaje.\\
+
+Obteniendo como resultado un sistema de bajo costo, el cual puede generar alto voltaje de mediana potencia y bajo ruido, obteniendo una comparación entre fuentes de alto voltaje comerciales implementadas en aceleradores de partículas y reactores nucleares de baja potencia. \\
+
+Como resultado de esta tesis se muestra una comparación entre el diseño realizado y una fuente de alto voltaje comercial llamada... las cuales han sido sometidas a cargas similares a las utilizadas en aceleradores de partículas.\newpage
+
+
+
 
 \section{Antecedentes y justificación}
 
 
-Uno de los mayores avances tecnológicos de la humanidad ha sido el desarrollo de los aceleradores de partículas, entre los tantos ejemplos que se pueden mencionar de las aplicaciones de estas tecnologías, podemos hacer referencia, en medicina, a un echo actual, el veinte por ciento de los fármacos radioactivos que se inyectan en los pacientes son producidos en aceleradores del tipo cyclotrone. Los ciclotrones aceleran los protones típicamente a energías de 40 MeV. Estos aceleradores son diseñados para funcionar de manera confiable y producir haces de alta intensidad con un mínimo de intervención humana.\\
-%agregar referencia
+Uno de los mayores avances tecnológicos de la humanidad ha sido el desarrollo de aceleradores de partículas, ya que tienen grandes aplicaciones en las áreas médicas, militares y alimentarias. Podemos hacer referencia, en medicina, a un echo actual, el veinte porciento de los fármacos radiactivos que se inyectan en los pacientes son producidos en aceleradores del tipo Ciclotrones. Los cuales aceleran los protones típicamente a energías de 40 MeV. Estos aceleradores son diseñados para funcionar de manera confiable produciendo haces de alta intensidad con un mínimo de intervención humada, he allí la meta en esta tesis.\\
 
-En el pasado la radio terapia hacia uso extendido de agujas de radio o rayos gamma de cobalto radioactivo, la desventaja de este tipo de maquinaria es que no se puede interrumpir su funcionamiento, y con el pasar del tiempo su energia decae y es necesario cambiar la fuente radioactiva. Actualmente se usan aceleradores de electrones en un rango de 15 a 20 MeV que producen rayos x, que a su vez se dirigen a los tumores.\\
+En el pasado la radio terapia hacia uso extendido de agujas de radio o rayos gamma de cobalto radioactivo, la desventaja de este tipo de maquinaria es que tienen que tener un funcionamiento ininterrumpido, y con el pasar del tiempo su energia decae y es necesario cambiar la fuente radioactiva y resguardarla del medio ambiente, la cual representa un peligro para la humanidad y un problema sin solución actual, ya que la contaminación es latente.\\
 
+Otro de los tantos ejemplos de las aplicaciones de estas tecnologías es en la rama de la fusión nuclear, ya que estas requieren fuentes de alto voltaje para su funcionamiento, en Mexico existe desarrollo en esta área. En la parte experimental, en 1978 se inició un proyecto mexicano de fusión termonuclear y, en 1983, se propuso el diseño de una pequeña máquina experimental llamada “Novillo”. Este (pequeño) Tokamak fue diseñado y construido por trabajadores mexicanos del ININ en el Centro Nuclear de Salazar, México. La continuación de los trabajos de investigación en el Tokamak Novillo, permitirá que el país se reincorpore a una de las áreas de investigación en Física de Plasmas más prometedoras para el futuro energético. La infraestructura existente y la experiencia adquirida, permitirán contribuir al desarrollo de una futura aplicación de la energía nuclear de fusión, la cual será una fuente alterna de energía en el presente siglo. La continuación de las investigaciones en fusión permitirá a los investigadores del ININ, el ingreso a programas bajo el auspicio del Organismo Internacional de Energía Atómica y a un futuro mediano, el ingreso a los trabajos relacionados con los proyectos ITER e IGNITOR. (fuente: http://www.inin.gob.mx/temasdeinteres/fusionnuclear.cfm).\\
 
-Otro ejemplo claro de la importancia de los aceleradores de partículas para la sociedad son las fuentes de luz compacta, los aceleradores de partículas que producen la luz de sincrotón con longitudes de onda del orden de angstroms son máquinas de gran tamaño. Existen algunas docenas en el mundo. Recientemente, un grupo de físicos logró construir una fuente compacta de luz capaz de producir esta radiación de manera óptima. Para lograrlo, se ha construido un pequeño acelerador de electrones. Cuando los electrones han alcanzado una energía de alrededor de 25 MeV se lo hace chocar con un haz de luz láser. En el choque se da un proceso conocido por los físicos como dispersión Compton (en honor al físico que describió por primera vez el comportamiento de la radiación en procesos de colisión de luz con electrones, Arthur Compton, 1892-1962), lo que produce radiación con longitudes de onda similares a las que se obtienen en los aceleradores más grandes. (Andrade, Instituto de física UNAM).\\
+Bajo la premisa de la ventaja del desarrollo tecnológico de los aceleradores de partículas para nuestro país, es necesario comenzar los estudios en estos temas, ya que las posibilidades de aplicación son bastas y de suma importancia. Con el pasar del tiempo las aplicaciones han aumentado considerablemente, desde ramas de la medicina como ya lo mencionamos, hasta sistemas de aislamiento por campo magnético de plasmas y sistemas para aumentar temperaturas hasta puntos de fusión para sistemas de generación de energía en plantas de fusión nuclear, los mexicanos han apostado por la participación en el desarrollo de estas tecnologías.\\
 
+Este trabajo de tesis pretende dar un pequeño acercamiento a temas relacionados con los ya antes mencionados, mediante el desarrollo de la instrumentación de una fuente de alto voltaje para un acelerador de electrones lineal, el cual se divide en varias etapas de desarrollo, la primera es el sistema de fuentes, nos basaremos en el desarrollo echo por Cockroft-Walton (CW) (1932) combinado con un inversor de voltaje a alta frecuencia incidente en un embobinado de ignición controlado digital mente mediante un microcontrolador a lazo cerrado, el cual cuenta con una comunicación PC-HPW (HIGH POWER SUPPLY), permitiendo al usuario, mediante una retroalimentación, configurar la fuente de voltaje a los parámetros deseados, así como también guardar un registro en las variaciones de corriente y voltaje a la que nuestra fuente es sometida. \\
+\newpage
 
-Bajo la premisa de la ventaja del desarrollo tecnológico de los aceleradores de partículas para nuestro país, es necesario comenzar los estudios en estos temas, ya que las posibilidades de aplicación son bastas y de suma importancia. Con el pasar del tiempo los aplicaciones han aumentado considerablemente, desde ramas de la medicina como ya lo mencionamos, hasta sistemas de aislamiento por campo magnético de plasmas y sistemas para aumentar temperaturas hasta puntos de fusión para sistemas de generación de energía en plantas de fusión nuclear.\\
-
-
-Este trabajo mostrara el desarrollo de la instrumentación de un acelerador de electrones lineal, el cual se divide en varias etapas de desarrollo, la primera es el sistema de fuentes, nos basaremos en el desarrollo echo por Crockoft-Walton (CW) (1932)combinado con un oscilador PWM incidente en un embobinado de ignición controlado digital mente mediante un microcontrolador, el cual cuenta con una comunicación PC-Microcontrolador, permitiendo al usuario, mediante una retroalimentación, configurar la fuente de voltaje a los parámetros deseados, así como también guardar un registro en las variaciones de corriente y voltaje a la que nuestra fuente es sometida. \\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                   Planteamiento del problema                          %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Planteamiento del problema}
-Hoy en día el desarrollo de tecnologías que involucran aceleradores de partículas esta
-cada vez mas presentes en la vida diaria, en México ya existe participación en desarrollo
-de gran nivel, como lo es el Instituto de Investigaciones Nucleares (ININ) y distintos
-laboratorios de gran importancia en nuestro país, lo cual brinda la posibilidad a los investigadores
+Hoy en día el desarrollo de tecnologías que involucran aceleradores de partículas esta cada vez mas presentes en la vida diaria, en México ya existe participación en desarrollo de gran nivel, como lo es el Instituto de Investigaciones Nucleares (ININ) y distintos laboratorios de gran importancia en nuestro país, lo cual brinda la posibilidad a los investigadores
 de involucrarse en este tipo de desarrollo para poder satisfacer las necesidades
 que se requieren.\\
 
-El uso de aceleradores de partículas para aplicaciones medicas ha tenido gran auge en
-los últimos años, ya que las ventajas que tienen sobre las fuentes radioactivas son bastas,
-este echo da la oportunidad a las universidades de preparar expertos en estos temas y
-diseñar maquinaria a medida, que cumpla las exigencias de la región. Aunque ya existen
-trabajos referentes a fuentes de alto voltaje, generación de electrones mediante telurio y
-detectores de estos mismos, la curva de aprendizaje necesaria para especializarse en estos
-temas es grande y dejar un precedente en nuestro país es necesaria y muy útil, es por ello que estas
+El uso de aceleradores de partículas para aplicaciones medicas ha tenido gran auge en los últimos años, ya que las ventajas que tienen sobre las fuentes radioactivas son bastas, este echo da la oportunidad a las universidades de preparar expertos en estos temas y diseñar maquinaria a medida, que cumpla las exigencias de la región. Aunque ya existen trabajos referentes a fuentes de alto voltaje, generación de electrones mediante telurio y detectores de estos mismos, la curva de aprendizaje necesaria para especializarse en estos temas es grande y dejar un precedente en nuestro país es necesaria y muy útil, es por ello que estas
 investigaciones son de gran importancia.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                           Hipotesis y objetivos                       %
@@ -74,13 +72,14 @@ Este trabajo tiene por objetivo desarrollar una fuente de alto voltaje de hasta 
 \begin{itemize}
 \item Desarrollo de fuente estable de alto voltaje.
 \begin{itemize}
-\item Instrumentación para control de Microcontrolador ATMEGA328
-\item Instrumentación para generación de primera etapa de voltaje.
-\item Instrumentación para generación de oscilador controlado por PWM incidente en transformador de alto voltaje.
-\item Tercera etapa amplificadora de voltaje mediante arreglo Cockoft-walton de media onda.
-\item Control de sistema de voltaje mediante comunicación UART.
-\item Control manual mediante encoder rotativo y LCD indicadora.
-\
+\item Diseño de fuente de voltaje a 12V, 180W y bajo ruido.
+\item Simulación de fuente de voltaje a 12V.
+\item Construcción de fuente de voltaje 12V.
+\item Interfaces gráficas para control de inversor.
+\item Diseño de driver generador de PWM bipolar para inversor.
+\item Simulación de driver generador de PWM bipolar
+\item Construcción de driver generador PWM bipolar.
+\item Diseño de interfaces graficas para control de inversor
 \end{itemize}  
 \end{itemize}
 
